# rag-recipe-finder

./: .gitignore  README.md
backend/: .dockerignore  .gitignore  Dockerfile  package-lock.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  serverless.yaml
backend/app/: __init__.py  main.py
backend/app/api/: create_job.py  recipes.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: recipes.py
backend/app/core/: __init__.py  config.py  schemas.py
backend/app/services/: __init__.py  dynamodb_service.py  langchain_service.py  recipe_ingestion_service.py  recipe_service.py
backend/scripts/: delete_first_k_recipes.py  preprocess_csv.py  process_csv_recipes.py  reset_dynamodb.py  slice_200k.py
backend/tests/: __init__.py  test_dynamodb_connection.py  test_recipe_ingestion.py  test_recipe_ingestion_integration.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  RecipeCarousel.tsx  TagInput.tsx  index.css
frontend/src/api/: recipes.ts
